@@ -1,5 +1,6 @@
 4.6.2:
   * Support for MVCC (MultiVersion Concurrency Control).
+  * Support for DB_DSYNC_LOG, DB_DSYNC_DB and DB_OVERWRITE flags.
   * Move old documentation to ReST format. This is important for several
     reasons, notably to be able to integrate the documentation "as is"
     in python official docs (from Python 2.6).
